# my-cpp-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  cmake.yml  staticanalysis.yml
src/: CMakeLists.txt  main.cpp  sum.cpp  sum.hpp
test/: CMakeLists.txt  tests.cpp
